# SnackbarOS

./: CMakeLists.txt  README.md  makefile
bochs/: bochslog.txt  bochsrc.txt
iso/boot/: kernel.elf
src/: common.c  kio.c  kmain.c  loader.s
src/includes/: common.h  kio.h  magicaddr.h  serial.h  string.h  vga.h
src/includes/clib/: ministdint.h
src/includes/grub/: multiboot.h
src/includes/libc/: string.h
src/includes/libk/: kstdio.h
src/includes/mem/: gdt.h
src/kernel/: kmain.c  loader.s  serial.c  vga.c
src/kernel/mem/: gdt.c  gdt.s
src/libc/: string.c
src/libk/: kstdio.c
